--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -220,6 +220,15 @@ li {
     color: var(--black) !important;
 }
 
+/* Images */
+.img {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+
 /* Checkmark list styling */
 ul.checkmark {
     list-style: none;
